# self_healing_multi_agent-_system

./: .env.example  .gitignore  README.md  RESEARCH_PAPER.md  Resilient_Cognition_SH-MAS_Research_Paper.docx  generate_docx.py  generate_pdf.py  main.py  pyproject.toml  requirements.txt
api/: __init__.py  app.py
api/routes/: health.py  tasks.py
api/schemas/: __init__.py  requests.py
config/: __init__.py  logging_config.py  settings.py
core/agents/: __init__.py  base.py  llm_factory.py  reflection.py  repair.py
core/graph/: __init__.py  edges.py  nodes.py  state.py  workflow.py
core/healing/: __init__.py  analyzer.py  detector.py  learner.py  repairer.py
core/knowledge/: __init__.py  graph.py  taxonomy.py
core/memory/: __init__.py  episodic.py  manager.py  semantic.py
experiments/: __init__.py  metrics.py  runner.py
persistence/: __init__.py  database.py  models.py  repositories.py
tests/: conftest.py
tests/integration/: __init__.py  test_metrics.py  test_tools.py
tests/unit/: __init__.py  test_detector.py  test_knowledge_graph.py  test_llm_factory.py  test_memory.py  test_taxonomy.py
tools/: __init__.py  base.py  registry.py
tools/enterprise/: __init__.py  api_client.py  database.py  file_proc.py  noop.py  notifier.py  web_search.py
tools/mcp/: __init__.py  server.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/api/: client.ts
ui/src/components/: Layout.tsx  MetricCard.tsx  StatusBadge.tsx  TaskSubmitForm.tsx  TaskTable.tsx
ui/src/pages/: Dashboard.tsx  Knowledge.tsx  TaskDetail.tsx  Tasks.tsx
ui/src/types/: index.ts
