[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "selfhealingmultiagent"
version = "1.0.0"
description = "Self-Healing Multi-Agent Framework for Reliable Enterprise AI Systems"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Research Team" }]
license = { text = "MIT" }
keywords = ["multi-agent", "self-healing", "langgraph", "ai", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.2.28",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.9",
    "langchain-anthropic>=0.2.4",
    "langchain-community>=0.3.7",
    "langchain-groq>=0.2.0",
    "langchain-ollama>=0.2.0",
    "ollama>=0.3.0",
    "openai>=1.54.0",
    "anthropic>=0.40.0",
    "groq>=0.11.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "networkx>=3.4.2",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "rich>=13.9.0",
    "numpy>=1.26.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]

[project.scripts]
selfheal = "main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "core*", "tools*", "api*", "persistence*", "experiments*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
